Fix text overlap on CSV import page

--- a/app/assets/stylesheets/DocumentSet/index/import-upload.less
+++ b/app/assets/stylesheets/DocumentSet/index/import-upload.less
@@ -3,7 +3,7 @@
 #import-from-upload {
   p.help-block {
     .text-muted;
-    margin-top: -10px;
+    margin-top: 0;
   }
 
   progress {
